--- a/dhiraj/Views/Bit/index.cshtml
+++ b/dhiraj/Views/Bit/index.cshtml
@@ -3,23 +3,31 @@
     ViewBag.Title = "index";
     int sn = 0;
 }
-<a href="@Url.Action("dhiraj")">Add new record</a>
-<h2>index</h2>
-<table class="table" border="1">
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Address</th>
-        <th>contact</th>
 
-    </tr>
+<style>
+    table {
+        background-color: black;
+        color: white;
+    }
+    </style >
+    <a href="@Url.Action("dhiraj")" > Add new record</a >
+    <h2 > index</h2 >
+    <table class="table" border="1" >
+    <tr >
+    <th > ID</th >
+    <th > Name</th >
+    <th > Address</th >
+    <th > contact</th >
+
+    </tr >
     @foreach (var data in Model)
     {
-        <tr>
-            <td>@(++sn)</td>
-            <td>@(data.name)</td>
-            <td>@(data.address)</td>
-            <td>@(data.contact)</td>
-        </tr>
+    <tr >
+    <td >@(++sn) </td >
+    <td >@(data.name) </td >
+    <td >@(data.address) </td >
+    <td >@(data.contact) </td >
+    <td><a href="@Url.Action("edit", new {id=data.ID})">Edit<</a></td>
+    </tr >
     }
-</table>
+    </table >
