--- a/dhiraj/Views/Shared/_Layout.cshtml
+++ b/dhiraj/Views/Shared/_Layout.cshtml
@@ -23,7 +23,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Dhiraj","index","Bit")</li>
+                    <li>@Html.ActionLink("Dhiraj", "index", "Bit")</li>
+                    <li>@Html.ActionLink("Dhiraje", "index1", "bit1")</li>
                 </ul>
             </div>
         </div>
