--- a/dhiraj/Views/Shared/_Layout.cshtml
+++ b/dhiraj/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Dhiraj", "index", "Bit")</li>
                     <li>@Html.ActionLink("Dhiraje", "index1", "bit1")</li>
+                    <li>@Html.ActionLink("Dhiraji", "index2", "bit2")</li>
                 </ul>
             </div>
         </div>
