--- a/dhiraj/Views/Shared/_Layout.cshtml
+++ b/dhiraj/Views/Shared/_Layout.cshtml
@@ -24,8 +24,9 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Dhiraj", "index", "Bit")</li>
-                    <li>@Html.ActionLink("Dhiraje", "index1", "bit1")</li>
-                    <li>@Html.ActionLink("Dhiraji", "index2", "bit2")</li>
+                    <li>@Html.ActionLink("Table_1", "index1", "bit1")</li>
+                    <li>@Html.ActionLink("Employee_Salary", "Index2", "bit2")</li>
+                    
                 </ul>
             </div>
         </div>
