--- a/dhiraj/Views/bit1/dhiraj1.cshtml
+++ b/dhiraj/Views/bit1/dhiraj1.cshtml
@@ -7,9 +7,13 @@
 
     <label>Name</label>
     <div class="col-md-u">
-        <input type="text" name="d_name" class="form-control" />
+        <input type="text" name="name" class="form-control" />
     </div>
-    
+    <label>Address</label>
+    <div class="col-md-u">
+        <input type="text" name="address" class="form-control" />
+    </div>
+
     <label>contact</label>
     <div class="col-md-u">
         <input type="text" name="contact" class="form-control" />
