--- a/dhiraj/Views/bit2/Edit2.cshtml
+++ b/dhiraj/Views/bit2/Edit2.cshtml
@@ -5,19 +5,23 @@
 
 @using (Html.BeginForm("UpdateData", "bit2"))
 {
+    <div class="col-md-2">
+        <label>Employee Name</label>
+        @Html.DropDownList("employeelist", null, "Select", htmlAttributes: new { @Name = "employee_id", @class = "Form-control" });
+    </div>
     <input type="hidden" name="id" value="@Model.id" />
     <label>employee_id</label>
     <div class="col-md-u">
-        <input type="text" name="employee_id" class="form-control" />
+        <input type="text" name="employee_id" class="form-control"  value="@Model.employee_id"/>
     </div>
 
     <label>salary_paid</label>
     <div class="col-md-u">
-        <input type="text" name="salary_paid" class="form-control" />
+        <input type="text" name="salary_paid" class="form-control"  value="@Model.salary_paid"/>
     </div>
     <label>paid_date</label>
     <div class="col-md-u">
-        <input type="text" name="paid_date" class="form-control" />
+        <input type="text" name="paid_date" class="form-control"  value="@Model.paid_date" />
     </div>
     <div class="col-md-">
         <input type="submit" class="btn btn-success" value="save" />
