--- a/dhiraj/Views/bit2/Salary.cshtml
+++ b/dhiraj/Views/bit2/Salary.cshtml
@@ -3,13 +3,17 @@
     ViewBag.Title = "Salary";
 }
 
+<h2>Salary</h2>
+@using (Html.BeginForm("savedata", null, FormMethod.Post))
+{
+
 <form action="savedata">
 
-    <label>Employee_id</label>
-    <div class="col-md-u">
-        <input type="text" name="employee_id" class="form-control" />
-    </div>
-
+  
+    <div class="col-nd-2">
+        <label>Employee Name</label>
+        @Html.DropDownList("employeeList", null, "Select", htmlAttributes: new { @Name = "employee_id", @class = "Form-Control" });
+      </div>
     <label>Salary_paid</label>
     <div class="col-md-u">
         <input type="text" name="salary_paid" class="form-control" />
@@ -22,5 +26,6 @@
         <input type="submit" class="btn btn-success" value="save" />
     </div>
 </form>
+}
 
 <h2>dhiraj</h2>
